updated heatmap css and relevant css in combinedcomponent to accomodate rogue whitespace in bottom of heatmap container. added padding-top and grey background as temp fix.

--- a/src/components/Graphing/Metrics/Heatmap.css
+++ b/src/components/Graphing/Metrics/Heatmap.css
@@ -1,7 +1,7 @@
 .heatmap-canvas {
   /* border: solid 0.5em grey; */
   /* height: 100%; */
-  margin-top: 1em;
+  /* margin-top: 1em; */
   justify-self:center;
   box-sizing: border-box;
 }
